--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
+    "aws-sdk-mock": "^5.4.0",
     "jest": "^27.2.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
