--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "decrypt": "node dist/security/decrypt.js",
+    "intg:test": "jest -i test/integration/integration.test.ts",
     "prebuild": "rimraf dist",
     "build": "tsc",
     "start": " node dist/index.js"
