--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "intg:test": "jest -i test/integration/integration.test.ts",
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "start": " node dist/index.js"
+    "start": " node dist/index.js",
+    "lint:fix": "eslint \"./{src,test}/**/*.{j,t}s\" --quiet --fix",
+    "lint": "eslint \"./{src,test}/**/*.{j,t}s\" --quiet",
+    "format:code": "prettier --write \"./{src,test}/**/*.{j,t}s\" --quiet"
   },
   "keywords": [],
   "author": "Puneet Bhojwani",
@@ -23,6 +26,10 @@
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
     "aws-sdk-mock": "^5.4.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "jest": "^27.2.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
